--- a/README
+++ b/README
@@ -1,20 +1,13 @@
 MaxB3D - A 3D rendering engine for BlitzMax inspired by MiniB3D.
 Copyright (C) 2011 by Kevin Primm
 
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
+Licensed under the 'MIT license.' See COPYING for details.
 
-The above copyright notice and this permission notice shall be included in
-all copies or substantial portions of the Software.
+Notes
+===================
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.
+In order to compile the Newton module, you will need sys87.Newton. Get it from,
+http://github.com/system87/sys87.mod
+
+In order for the D3D driver to work properly, follow these directions,
+https://github.com/kfprimm/maxb3d/wiki/BRL.DXGraphics-and-BRL.D3D9Max2D-Tweak
