Attempting to get boned animation support in place.

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 MaxB3D - A 3D rendering engine for BlitzMax inspired by MiniB3D.
 Copyright (C) 2011 by Kevin Primm
 
-Licensed under the 'MIT license.' See LICENSE for details.
+Released under the 'MIT license.' See LICENSE for details.
 
 Notes
 ===================
