--- a/README
+++ b/README
@@ -6,8 +6,8 @@ Released under the 'MIT license.' See LICENSE for details.
 Notes
 ===================
 
-In order to compile various MaxB3D modules, you will need a few modules. Get them from,
-http://github.com/system87/sys87.mod
+In order to compile various MaxB3D modules, you will need a few extra modules. Get them from,
+http://github.com/kfprimm/prime.mod
 
 In order for the D3D driver to work properly, follow these directions,
 https://github.com/kfprimm/maxb3d/wiki/BRL.DXGraphics-and-BRL.D3D9Max2D-Tweak
